[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/gui/cyber_interface2.png" type="Texture" id=1]
[ext_resource path="res://fonts/BebasKai.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/options.gd" type="Script" id=3]
[ext_resource path="res://assets/sounds/sfx/Menu/Menu Selection Click.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/shaders/transition.shader" type="Shader" id=5]
[ext_resource path="res://scripts/fade_in.gd" type="Script" id=6]

[sub_resource type="Environment" id=1]
background_mode = 4
glow_enabled = true
glow_intensity = 3.96
glow_strength = 0.91
glow_blend_mode = 1
glow_bicubic_upscale = true

[sub_resource type="DynamicFont" id=2]
size = 96
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.898305, 1 )
colors = PoolColorArray( 0, 0, 0, 1, 0.871186, 0.871186, 0.871186, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="ShaderMaterial" id=5]
shader = ExtResource( 5 )
shader_param/cutoff = 0.0
shader_param/smooth_size = 1.0
shader_param/mask = SubResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 48
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -5.03967
margin_top = 3.77975
margin_right = -5.03967
margin_bottom = 3.77979
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="iu" type="Sprite" parent="."]
position = Vector2( -130.96, -11.7797 )
scale = Vector2( 0.675, 0.725926 )
texture = ExtResource( 1 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="menu_sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="options_title" type="Label" parent="."]
margin_left = 429.0
margin_top = 52.0
margin_right = 646.0
margin_bottom = 157.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0.741176, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "OTIONS"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="fade_in" type="ColorRect" parent="."]
visible = false
material = SubResource( 5 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -3.0
margin_top = -12.0
margin_right = 13.0
margin_bottom = 3.99994
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
script = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="menu_vbox" type="VBoxContainer" parent="."]
margin_left = 421.04
margin_top = 180.22
margin_right = 658.04
margin_bottom = 620.22
custom_constants/separation = 63
__meta__ = {
"_edit_use_anchors_": false
}

[node name="game_options_button" type="Button" parent="menu_vbox"]
modulate = Color( 1.5, 1.5, 1.5, 1 )
margin_right = 236.0
margin_bottom = 59.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0.741176, 1, 1 )
text = "Game"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="video_options_button" type="Button" parent="menu_vbox"]
modulate = Color( 1.5, 1.5, 1.5, 1 )
margin_top = 122.0
margin_right = 236.0
margin_bottom = 181.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0.741176, 1, 1 )
text = "Video"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="audio_options_button" type="Button" parent="menu_vbox"]
modulate = Color( 1.5, 1.5, 1.5, 1 )
margin_top = 244.0
margin_right = 236.0
margin_bottom = 303.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0.741176, 1, 1 )
text = "Audio"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back_options_button" type="Button" parent="menu_vbox"]
modulate = Color( 1.5, 1.5, 1.5, 1 )
margin_top = 366.0
margin_right = 236.0
margin_bottom = 425.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0.741176, 1, 1 )
text = "Back"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="menu_vbox/game_options_button" to="." method="_on_game_options_button_mouse_entered"]
[connection signal="pressed" from="menu_vbox/game_options_button" to="." method="_on_game_options_button_pressed"]
[connection signal="mouse_entered" from="menu_vbox/video_options_button" to="." method="_on_video_options_button_mouse_entered"]
[connection signal="pressed" from="menu_vbox/video_options_button" to="." method="_on_video_options_button_pressed"]
[connection signal="mouse_entered" from="menu_vbox/audio_options_button" to="." method="_on_audio_options_button_mouse_entered"]
[connection signal="pressed" from="menu_vbox/audio_options_button" to="." method="_on_audio_options_button_pressed"]
[connection signal="mouse_entered" from="menu_vbox/back_options_button" to="." method="_on_back_options_button_mouse_entered"]
[connection signal="pressed" from="menu_vbox/back_options_button" to="." method="_on_back_options_button_pressed"]
